# qrb_ros_vision_service

./: CHANGELOG.md  README.md
qrb_ros_vision_service/: CMakeLists.txt  package.xml
qrb_ros_vision_service/include/qrb_ros_vision_service/: action_handler.hpp  vision_service.hpp
qrb_ros_vision_service/src/: action_handler.cpp  main.cpp  vision_service.cpp
qrb_vision_manager/: CMakeLists.txt  package.xml
qrb_vision_manager/config/: vision_manager_node.conf
qrb_vision_manager/include/qrb_vision_manager/: callback_manager.hpp  camera_manager.hpp  mission_manager.hpp  node_info.hpp  parameter_manager.hpp  request_manager.hpp
qrb_vision_manager/include/qrb_vision_manager/executor/: camera.hpp  executor_base.hpp  image_segment.hpp  object_detect.hpp  qr_code_detect.hpp  video.hpp
qrb_vision_manager/src/: camera_manager.cpp  mission_manager.cpp  parameter_manager.cpp  request_manager.cpp
qrb_vision_manager/src/executor/: camera.cpp  executor_base.cpp  image_segment.cpp  object_detect.cpp  qr_code_detect.cpp  video.cpp
